--- a/PingAuthenticationCore/build.gradle
+++ b/PingAuthenticationCore/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 30
+    compileSdk 33
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 2
-        versionName "1.0.1"
-
+        versionName "1.0.2"
+        namespace 'com.pingidentity.authcore'
         buildConfigField "boolean", "USE_HTTPS", 'false' //for testing purposes this can be disabled
         buildConfigField "int", "HTTP_CONNECT_TIMEOUT", '10000'
         buildConfigField "int", "HTTP_READ_TIMEOUT", '20000'
@@ -38,7 +38,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     //Google's gSon library to build and parse JSON format
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
