--- a/sample/gradle.properties
+++ b/sample/gradle.properties
@@ -24,4 +24,15 @@ OIDC_REDIRECT_URI = "pingonesdk://sample"
 # https://developer.android.com/google/play/integrity/setup#enable-responses
 google_cloud_project_number = "<google_cloud_project_number>"
 
-#you can add here other properties as well
+# Passkeys client id
+PASSKEYS_CLIENT_ID = "<PASSKEYS_CLIENT_ID>"
+
+# Passkeys endpoint prefix
+PASSKEYS_ENDPOINT_PREFIX = "https://<PASSKEYS_ENDPOINT_PREFIX>/"
+
+# Passkeys environment id
+PASSKEYS_ENVIRONMENT_ID = "<PASSKEYS_ENVIRONMENT_ID>"
+
+# Passkeys RpId
+PASSKEYS_RP_ID = "<PASSKEYS_RP_ID>"
+
