--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -60,7 +60,7 @@ dependencies {
      * import the PingOne for Customer Android SDK. Get the latest version from
      * https://search.maven.org/search?q=g:com.pingidentity.pingonemfa
      */
-    implementation 'com.pingidentity.pingonemfa:android-sdk:1.11.0-SNAPSHOT'
+    implementation 'com.pingidentity.pingonemfa:android-sdk:1.11.0'
     /*
      * import the PingOne for Customer Mobile Authentication Framework
      */
