--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -16,8 +16,8 @@ android {
         applicationId "com.pingidentity.pingone"
         minSdkVersion 26
         targetSdkVersion 34
-        versionCode = 8606
-        versionName "1.11.0"
+        versionCode = 23
+        versionName "1.11.1"
 
         // Make sure this is consistent with the redirect URI used in res/raw/auth_config.json,
         // or specify additional redirect URIs in AndroidManifest.xml
@@ -60,7 +60,7 @@ dependencies {
      * import the PingOne for Customer Android SDK. Get the latest version from
      * https://search.maven.org/search?q=g:com.pingidentity.pingonemfa
      */
-    implementation 'com.pingidentity.pingonemfa:android-sdk:1.11.0-3-SNAPSHOT'
+    implementation 'com.pingidentity.pingonemfa:android-sdk:1.11.0-SNAPSHOT'
     /*
      * import the PingOne for Customer Mobile Authentication Framework
      */
