--- a/gradle.properties
+++ b/gradle.properties
@@ -17,8 +17,11 @@ org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 
-# Automatically convert third-party libraries to use AndroidX
-android.enableJetifier=true
+# This flag is needed to enable AndroidX for libraries that do not support it natively. It is strongly
+# recommended though to run check before enabling it, otherwise it may afffect build time significantly
+# Some third-party libraries might still use android.support.* instead of androidx.*. If you enable
+# Jetifier, Gradle rewrites these outdated dependencies at build time so they work with AndroidX.
+android.enableJetifier=false
 
 # For logging all the warnings from Gradle
 org.gradle.warning.mode=all
@@ -26,10 +29,9 @@ org.gradle.warning.mode=all
 # Flag to enable/disable generation of the BuildConfig class.
 # Setting the value to null resets to the default value. Default value is true.
 android.defaults.buildfeatures.buildconfig=true
-# AGP 8.0 generates R classes for resources defined in the current module only.
-android.nonTransitiveRClass=false
+# AGP 8.0 generates R classes for resources defined in the current module only. This means when you
+# enable android.nonTransitiveRClass=true, each module can only access its own resources instead of
+# inheriting all resources from dependencies
+android.nonTransitiveRClass=true
 # AGP 8.0 generates R classes with non-final fields by default.
 android.nonFinalResIds=false
-
-
-
