--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,10 +1,10 @@
 #Thu Jun 15 13:23:12 IDT 2023
 # The recommended way to execute any Gradle build is with the help of the Gradle Wrapper.
 # The Wrapper is a script that invokes a declared version of Gradle, downloading it beforehand if
-# necessary.
+# necessary. Adding the JAR file to version control and to release repository is expected.
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 # The full URL pointing to Gradle distribution ZIP file.
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.6-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
