--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -16,8 +16,8 @@ android {
         applicationId "com.pingidentity.pingone"
         minSdkVersion 26
         targetSdkVersion 34
-        versionCode = 23
-        versionName "1.11.1"
+        versionCode = 24
+        versionName "2.0.0"
 
         // Make sure this is consistent with the redirect URI used in res/raw/auth_config.json,
         // or specify additional redirect URIs in AndroidManifest.xml
@@ -60,7 +60,7 @@ dependencies {
      * import the PingOne for Customer Android SDK. Get the latest version from
      * https://search.maven.org/search?q=g:com.pingidentity.pingonemfa
      */
-    implementation 'com.pingidentity.pingonemfa:android-sdk:1.11.0'
+    implementation 'com.pingidentity.pingonemfa:android-sdk:2.0.0'
     /*
      * import the PingOne for Customer Mobile Authentication Framework
      */
@@ -69,10 +69,10 @@ dependencies {
     /*
      * Credential Manager APIs allow a passkey to be stored securely on the device.
      */
-    implementation "androidx.credentials:credentials:1.2.0"
+    implementation "androidx.credentials:credentials:1.2.2"
     // optional - needed for credentials support from play services, for devices running
     // Android 13 and below.
-    implementation "androidx.credentials:credentials-play-services-auth:1.2.0"
+    implementation "androidx.credentials:credentials-play-services-auth:1.2.2"
 
     /*
      * OkHttp is a third-party library developed by Square for sending and receive HTTP-based
@@ -80,7 +80,7 @@ dependencies {
      */
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
     //Import the Firebase BoM (Bill of Materials)
-    implementation platform('com.google.firebase:firebase-bom:32.2.3')
+    implementation platform('com.google.firebase:firebase-bom:33.1.1')
     //FireCloud Messaging Services
     implementation 'com.google.firebase:firebase-messaging'
 
@@ -90,20 +90,21 @@ dependencies {
     /*
      * Play Integrity API library
      */
-    implementation 'com.google.android.play:integrity:1.2.0'
+    implementation 'com.google.android.play:integrity:1.3.0'
 
     //to manage lifecycle easily
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment:2.7.3'
+    implementation 'androidx.navigation:navigation-fragment:2.7.7'
 
     /*
      * To easily build cameraX preview
      */
-    implementation 'androidx.camera:camera-camera2:1.2.3'
-    implementation 'androidx.camera:camera-lifecycle:1.2.3'
-    implementation 'androidx.camera:camera-view:1.3.0-rc02'
+    def camerax_version = "1.3.4"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-view:${camerax_version}"
 
     /*
      * ML Kit is a mobile SDK that brings Google's on-device machine learning expertise to a device
