--- a/PingAuthenticationCore/build.gradle
+++ b/PingAuthenticationCore/build.gradle
@@ -4,10 +4,10 @@ android {
     compileSdk 34
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 26
         targetSdkVersion 34
-        versionCode 2
-        versionName "1.0.2"
+        versionCode 3
+        versionName "1.0.3"
         namespace 'com.pingidentity.authcore'
         buildConfigField "boolean", "USE_HTTPS", 'false' //for testing purposes this can be disabled
         buildConfigField "int", "HTTP_CONNECT_TIMEOUT", '10000'
@@ -34,11 +34,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures {
+        buildConfig true
+    }
 
 }
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     //Google's gSon library to build and parse JSON format
-    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
