--- a/PingAuthenticationUI/build.gradle
+++ b/PingAuthenticationUI/build.gradle
@@ -5,10 +5,10 @@ def VERSION_NAME = "VERSION_NAME"
 android {
     compileSdk 34
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 26
         targetSdkVersion 34
-        versionCode 2
-        versionName "1.0.2"
+        versionCode 3
+        versionName "1.0.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -22,6 +22,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures {
+        buildConfig true
+    }
 }
 
 dependencies {
@@ -29,10 +32,10 @@ dependencies {
     implementation project(':PingAuthenticationCore')
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment:2.6.0'
-    implementation 'androidx.navigation:navigation-ui:2.6.0'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.annotation:annotation:1.6.0'
+    implementation 'androidx.navigation:navigation-fragment:2.7.7'
+    implementation 'androidx.navigation:navigation-ui:2.7.7'
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.annotation:annotation:1.7.1'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
