--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -16,8 +16,8 @@ android {
         applicationId "com.pingidentity.pingone"
         minSdkVersion 26
         targetSdkVersion 34
-        versionCode = 24
-        versionName "2.0.0"
+        versionCode = 25
+        versionName "2.1.0"
 
         // Make sure this is consistent with the redirect URI used in res/raw/auth_config.json,
         // or specify additional redirect URIs in AndroidManifest.xml
@@ -51,8 +51,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
+            // uncomment following two lines to enable app obfuscation
+            //minifyEnabled true
+            //proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    
+    //ensures that the BuildConfig class is generated for your module
+    buildFeatures {
+        buildConfig true
+    }
+
 
 }
 dependencies {
@@ -60,7 +69,7 @@ dependencies {
      * import the PingOne for Customer Android SDK. Get the latest version from
      * https://search.maven.org/search?q=g:com.pingidentity.pingonemfa
      */
-    implementation 'com.pingidentity.pingonemfa:android-sdk:2.0.0'
+    implementation 'com.pingidentity.pingonemfa:android-sdk:2.1.0'
     /*
      * import the PingOne for Customer Mobile Authentication Framework
      */
@@ -80,7 +89,7 @@ dependencies {
      */
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
     //Import the Firebase BoM (Bill of Materials)
-    implementation platform('com.google.firebase:firebase-bom:33.1.1')
+    implementation platform('com.google.firebase:firebase-bom:33.13.0')
     //FireCloud Messaging Services
     implementation 'com.google.firebase:firebase-messaging'
 
@@ -90,18 +99,18 @@ dependencies {
     /*
      * Play Integrity API library
      */
-    implementation 'com.google.android.play:integrity:1.3.0'
+    implementation 'com.google.android.play:integrity:1.4.0'
 
     //to manage lifecycle easily
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment:2.7.7'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
+    implementation 'androidx.navigation:navigation-fragment:2.9.0'
 
     /*
      * To easily build cameraX preview
      */
-    def camerax_version = "1.3.4"
+    def camerax_version = "1.4.2"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
     implementation "androidx.camera:camera-view:${camerax_version}"
@@ -111,7 +120,7 @@ dependencies {
      * ML Kit's APIs all run on-device, allowing for real-time use cases where you want to process
      * a live camera stream. This also means that the functionality is available offline.
      */
-    implementation 'com.google.mlkit:barcode-scanning:17.2.0'
+    implementation 'com.google.mlkit:barcode-scanning:17.3.0'
 
     /*
      * AppAuth for Android is a client SDK for communicating with OAuth 2.0 and OpenID Connect providers
