--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'androidx.navigation.safeargs'
 
 
 android {
-    compileSdk 34
+    compileSdk 36
     /*
      * The namespace is initially set to the package name you choose when you create your project.
      * While building your app into the final application package (APK), the Android build tools
@@ -15,9 +15,9 @@ android {
     defaultConfig {
         applicationId "com.pingidentity.pingone"
         minSdkVersion 26
-        targetSdkVersion 34
-        versionCode = 26
-        versionName "2.1.1"
+        targetSdkVersion 36
+        versionCode = 27
+        versionName "2.2.0"
 
         // Make sure this is consistent with the redirect URI used in res/raw/auth_config.json,
         // or specify additional redirect URIs in AndroidManifest.xml
@@ -34,6 +34,7 @@ android {
         buildConfigField "String", "PASSKEYS_CLIENT_ID", PASSKEYS_CLIENT_ID
         buildConfigField "String", "PASSKEYS_RP_ID", PASSKEYS_RP_ID
         buildConfigField "String", "PASSKEYS_ENDPOINT_PREFIX", PASSKEYS_ENDPOINT_PREFIX
+        buildConfigField "boolean", "IS_AUTO_ENROLLMENT_ENABLED", "true"
 
         /*
          * This is the variable that is injected into build config, while building the application.
@@ -65,11 +66,14 @@ android {
 
 }
 dependencies {
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.3.0'
+    implementation 'com.google.android.material:material:1.13.0'
+
     /*
      * import the PingOne for Customer Android SDK. Get the latest version from
      * https://search.maven.org/search?q=g:com.pingidentity.pingonemfa
      */
-    implementation 'com.pingidentity.pingonemfa:android-sdk:2.1.1'
+    implementation 'com.pingidentity.pingonemfa:android-sdk:2.2.0'
     /*
      * import the PingOne for Customer Mobile Authentication Framework
      */
@@ -78,10 +82,10 @@ dependencies {
     /*
      * Credential Manager APIs allow a passkey to be stored securely on the device.
      */
-    implementation "androidx.credentials:credentials:1.2.2"
+    implementation "androidx.credentials:credentials:1.6.0-beta02"
     // optional - needed for credentials support from play services, for devices running
     // Android 13 and below.
-    implementation "androidx.credentials:credentials-play-services-auth:1.2.2"
+    implementation "androidx.credentials:credentials-play-services-auth:1.6.0-beta02"
 
     /*
      * OkHttp is a third-party library developed by Square for sending and receive HTTP-based
@@ -89,12 +93,12 @@ dependencies {
      */
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
     //Import the Firebase BoM (Bill of Materials)
-    implementation platform('com.google.firebase:firebase-bom:33.13.0')
+    implementation platform('com.google.firebase:firebase-bom:34.3.0')
     //FireCloud Messaging Services
     implementation 'com.google.firebase:firebase-messaging'
 
     //Google's gSon library to build and parse JSON format
-    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.google.code.gson:gson:2.13.2'
 
     /*
      * Play Integrity API library
